Set theme jekyll-theme-midnight

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-midnight
 title: Prismatic Obloquy
 description: The blog of a semi-anonymous weirdo online
 show_downloads: false
